syntax = "proto3";

import "gogoproto/gogo.proto";

message Config {
    string user_id = 1 [(gogoproto.customname) = "UserID"];
}
